--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.pineone.xLua",
+  "name": "PineoneLuaScript",
   "version": "0.1.1",
   "displayName": "PineoneLuaScript",
   "description": "Added xLua"
