--- a/package.json
+++ b/package.json
@@ -2,6 +2,5 @@
   "name": "com.pineone.xlua",
   "version": "0.1.3",
   "displayName": "PineoneLuaScript",
-  "description": "0.1.1 Added xLua
-    0.1.3 -> Add Btn Event , Movement Event"
+  "description": "0.1.1 Added xLua, 0.1.3 -> Add Btn Event , Movement Event"
 }
